@@ -11,7 +11,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkSelect.c,v 1.13.2.1 2005/11/22 11:32:37 dkf Exp $
+ * RCS: @(#) $Id: tkSelect.c,v 1.13.2.2 2011/01/25 08:49:59 nijtmans Exp $
  */
 
 #include "tkInt.h"
@@ -917,7 +917,7 @@ Tk_SelectionObjCmd(clientData, interp, objc, objv)
 		cmdInfoPtr->byteOffset = 0;
 		cmdInfoPtr->buffer[0] = '\0';
 		cmdInfoPtr->cmdLength = cmdLength;
-		strcpy(cmdInfoPtr->command, string);
+		memcpy(cmdInfoPtr->command, string, cmdLength + 1);
 		Tk_CreateSelHandler(tkwin, selection, target, HandleTclCommand,
 			(ClientData) cmdInfoPtr, format);
 	    }
@@ -1016,7 +1016,7 @@ Tk_SelectionObjCmd(clientData, interp, objc, objv)
 	    lostPtr = (LostCommand *) ckalloc((unsigned) (sizeof(LostCommand)
 		    -3 + cmdLength));
 	    lostPtr->interp = interp;
-	    strcpy(lostPtr->command, script);
+	    memcpy(lostPtr->command, script, cmdLength + 1);
 	    Tk_OwnSelection(tkwin, selection, LostSelection,
 		    (ClientData) lostPtr);
 	    return TCL_OK;
