@@ -1,3 +1,10 @@
+2011-01-25  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tkSelect.c:     [Bug 3129527]: Fix buffer overflow w/ GCC 4.5 and
+	* generic/tkTextDisp.c    -D_FORTIFY_SOURCE=2. Just the strcpy->memcpy part,
+	* unix/tkUnixWm.c         to prevent anything like [Bug #3164879]
+	* win/tkWinWm.c
+
 2011-01-13  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* library/msgbox.tcl: [Patch #3154705] Close button has no
